Update validation, add loading from file.
Nearly 0.5.5