@@ -13,6 +13,7 @@ import com.hypixel.hytale.server.core.ui.builder.UICommandBuilder;
 import com.hypixel.hytale.server.core.ui.builder.UIEventBuilder;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
@@ -249,19 +250,43 @@ public class ButtonBuilder extends UIElementBuilder<ButtonBuilder> implements
 
     @Override
     protected boolean supportsStyling() {
+        return !isBackButton();
+    }
+
+    @Override
+    protected boolean isStyleWhitelist() {
         return true;
     }
 
     @Override
-    protected Set<String> getUnsupportedStyleProperties() {
-        if (this.theme == Theme.GAME_THEME) {
-            boolean allowTextColor = UIElements.BUTTON.equals(elementPath);
-            if (allowTextColor) {
-                return Set.of("FontSize", "Alignment", "HorizontalAlignment", "VerticalAlignment");
-            }
-            return Set.of("TextColor", "FontSize", "Alignment", "HorizontalAlignment", "VerticalAlignment");
+    protected Set<String> getSupportedStyleProperties() {
+        if (isBackButton()) {
+            return Set.of();
         }
-        return Collections.emptySet();
+        Set<String> supported = new HashSet<>(Set.of(
+                "FontSize",
+                "RenderBold",
+                "RenderUppercase",
+                "TextColor",
+                "HorizontalAlignment",
+                "VerticalAlignment",
+                "Alignment",
+                "RenderItalics",
+                "FontName",
+                "Wrap",
+                "LetterSpacing",
+                "OutlineColor"
+        ));
+        if (this.theme == Theme.GAME_THEME) {
+            supported.remove("FontSize");
+            supported.remove("Alignment");
+            supported.remove("HorizontalAlignment");
+            supported.remove("VerticalAlignment");
+            if (!UIElements.BUTTON.equals(elementPath)) {
+                supported.remove("TextColor");
+            }
+        }
+        return Collections.unmodifiableSet(supported);
     }
 
     @Override
@@ -272,22 +297,22 @@ public class ButtonBuilder extends UIElementBuilder<ButtonBuilder> implements
         applyLayoutMode(commands, selector);
         applyBackground(commands, selector);
 
-        if (text != null) {
+        if (text != null && isTextButtonElement()) {
             HyUIPlugin.getLog().logInfo("Setting Text: " + text + " for " + selector);
             commands.set(selector + ".Text", text);
         }
 
-        if (disabled != null) {
+        if (disabled != null && !isBackButton()) {
             HyUIPlugin.getLog().logInfo("Setting Disabled: " + disabled + " for " + selector);
             commands.set(selector + ".Disabled", disabled);
         }
 
-        if (overscroll != null) {
+        if (overscroll != null && isTextButtonElement()) {
             HyUIPlugin.getLog().logInfo("Setting Overscroll: " + overscroll + " for " + selector);
             commands.set(selector + ".Overscroll", overscroll);
         }
 
-        if (hyUIStyle == null && style != null) {
+        if (hyUIStyle == null && style != null && !isBackButton()) {
             HyUIPlugin.getLog().logInfo("Setting Style: " + style + " for " + selector);
             commands.set(selector + ".Style", style);
         }
@@ -302,5 +327,18 @@ public class ButtonBuilder extends UIElementBuilder<ButtonBuilder> implements
                         false);
             }
         });
+    }
+
+    private boolean isTextButtonElement() {
+        return UIElements.TEXT_BUTTON.equals(elementPath)
+                || UIElements.SECONDARY_TEXT_BUTTON.equals(elementPath)
+                || UIElements.SMALL_SECONDARY_TEXT_BUTTON.equals(elementPath)
+                || UIElements.TERTIARY_TEXT_BUTTON.equals(elementPath)
+                || UIElements.SMALL_TERTIARY_TEXT_BUTTON.equals(elementPath)
+                || UIElements.CANCEL_TEXT_BUTTON.equals(elementPath);
+    }
+
+    private boolean isBackButton() {
+        return UIElements.BACK_BUTTON.equals(elementPath);
     }
 }
